--- a/pps.html
+++ b/pps.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Beth Rumler</title>
+  <title>Paul Scoville</title>
   <link rel="icon" type="image/png" href="image/favicon.png">
   <style>
     body {
@@ -188,7 +188,7 @@
 
   <div class="header">
     <div class="menu-icon">≡</div>
-    <div class="logo">Beth Rumler</div>
+    <div class="logo">Paul Scoville</div>
     <div class="search-bar">
       <button class="search-button">AI JERK OFF</button>
       <input class="search-input" type="text" placeholder="What's on your dirty mind? Turn it into reality">
@@ -224,7 +224,7 @@
   }
 </style>
 
-  <div class="headline">The Cicada 3301 puzzel (Beth Rumler)
+  <div class="headline">The Cicada 3301 puzzel (Paul Scoville)
 </div>
 
   <div class="tags">
