--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <div class="background">
     <div class="overlay-box">
         <img src="cg.png" width="150" height="150" alt="Animation">
-      <h1>This Porn Website will be publish soon under the name of <span>Paul Scoville</span></h1>
+      <h1>This Porn Website will be publish soon under the name of <span>Paul Scovillee</span></h1>
       <p>This website is operated by Cicada 3301 Group, contains age-restricted material, including nudity and explicit depictions of sexual acts. By accessing this website, you confirm that you are at least 18 years old or of legal age in the jurisdiction from which you are accessing the website, and that you consent to the viewing of sexually explicit content.<br>
          </p>
 
